# cc-analysis

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: analyze.yml  ci.yml  volume.yml
config/: analysis.dev.yaml  analysis.prod.yaml  analysis.staging.yaml  chinese_sources.yaml  relevance_keywords.yaml  text_processing.yaml
config/keyword_dicts/: categories.yaml  entity_aliases.yaml  severity_modifiers.yaml
config/templates/: implications.yaml  perspectives.yaml
docs/: design.md
src/analysis/: __init__.py  active_situations.py  cli.py  config.py  data_transforms.py  dedup.py  entities.py  llm.py  output.py  signal_filtering.py  signal_normalization.py  signal_types.py  source_detection.py  tension_index.py  text_processing.py  timeline_compiler.py  translate.py  trend.py  volume_compiler.py
src/analysis/classifiers/: __init__.py  category.py  severity.py  source_mapper.py
tests/: conftest.py  test_active_situations.py  test_category.py  test_cli.py  test_config.py  test_data_transforms.py  test_dedup.py  test_entities.py  test_llm.py  test_output.py  test_severity.py  test_signal_filtering.py  test_signal_normalization.py  test_source_detection.py  test_source_mapper.py  test_tension_index.py  test_text_processing.py  test_timeline_compiler.py  test_translate.py  test_trend.py  test_volume_compiler.py
